Remove <TargetFramework>net6.0</TargetFramework> from csproj files
TargetFremwork is set in Directory.Build.Props and need only be added to csproj if overriding

--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Server/Web.Server.csproj
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Server/Web.Server.csproj
@@ -1,5 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
-
+  <PropertyGroup>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>disable</Nullable>
+  </PropertyGroup>
+  
   <PropertyGroup>
     <Description>Web Server</Description>
     <DisableImplicitComponentsAnalyzers>true</DisableImplicitComponentsAnalyzers>
