Split Common and AspNetCore.Common
We want to avoid decoupling AspNetCore had dependency on framework files.
Start Adding some global usings to shorten code. (Chose to put them in project file because currently the code cleanup removes them from the source.) AssemblyAnnotations.cs file would be good canidate location for them in future.
Add Appsettings to test projects for custom test settings.

--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Api/Api.Contracts/Api.Contracts.csproj
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Api/Api.Contracts/Api.Contracts.csproj
@@ -15,5 +15,12 @@
     <PackageReference Include="MediatR" />
     <PackageReference Include="Microsoft.Extensions.Options" />
   </ItemGroup>
-    
+  
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Common\Common.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Using Include="MediatR"/>
+  </ItemGroup>
 </Project>
