This is supposed to be in the Web.Server
I think it is a reasonable example endpoint to include on the Web.Server itself. Although could be on the API.Server also.
Set all the ports to 7000
All runs fine although Web.Server API tests fail for somereason

--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Server/Web.Server.csproj
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Server/Web.Server.csproj
@@ -2,8 +2,9 @@
   <PropertyGroup>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>disable</Nullable>
+    <UseRazorSourceGenerator>true</UseRazorSourceGenerator>
   </PropertyGroup>
-  
+
   <PropertyGroup>
     <Description>Web Server</Description>
     <DisableImplicitComponentsAnalyzers>true</DisableImplicitComponentsAnalyzers>
