Enable Implicit Usings globally

--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Directory.Build.props
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Directory.Build.props
@@ -8,6 +8,7 @@
 
   <!-- Common compile parameters -->
   <PropertyGroup>
+    <ImplicitUsings>enable</ImplicitUsings>
     <LangVersion>preview</LangVersion>
     <EnablePreviewFeatures>True</EnablePreviewFeatures>
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
