Add FakeItEasy to Integration Test Projects

--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Tests/Api.Server.Integration.Tests/Api.Server.Integration.Tests.csproj
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Tests/Api.Server.Integration.Tests/Api.Server.Integration.Tests.csproj
@@ -1,5 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
+    <PackageReference Include="FakeItEasy" />
     <PackageReference Include="Fixie.TestAdapter" />
     <PackageReference Include="FluentAssertions" />
   </ItemGroup>
