Rename Web.Shared to Web.Contracts to be more consistent
Delete dependecny diagrams (Boy they cluter up the project files)

--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Server/Web.Server.csproj
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Server/Web.Server.csproj
@@ -47,7 +47,7 @@
     <ProjectReference Include="..\..\..\AspNetCore.Common\AspNetCore.Common.csproj" />
     <ProjectReference Include="..\..\..\Common\Common.csproj" />
     <ProjectReference Include="..\Web.Spa\Web.Spa.csproj" />
-    <ProjectReference Include="..\Web.Shared\Web.Shared.csproj" />
+    <ProjectReference Include="..\Web.Shared\Web.Contracts.csproj" />
   </ItemGroup>
 
   <ItemGroup>
