--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Tests/Api.Server.Integration.Tests/Api.Server.Integration.Tests.csproj
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Tests/Api.Server.Integration.Tests/Api.Server.Integration.Tests.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
-    <PackageReference Include="AutoFixture"  />
+    <PackageReference Include="AutoFixture" />
     <PackageReference Include="AutoFixture.AutoFakeItEasy" />
     <PackageReference Include="FakeItEasy" />
     <PackageReference Include="Fixie.TestAdapter" />
@@ -16,6 +16,12 @@
 
   <ItemGroup>
     <Folder Include="Configuration\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <AdditionalFiles Include="..\..\DependencyValidation\DependencyValidation1.layerdiagram" Link="DependencyValidation1.layerdiagram">
+      <Visible>False</Visible>
+    </AdditionalFiles>
   </ItemGroup>
 
   <ItemGroup>
