--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Tests/Web.Server.Integration.Tests/Web.Server.Integration.Tests.csproj
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Tests/Web.Server.Integration.Tests/Web.Server.Integration.Tests.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <ItemGroup>
-    <PackageReference Include="AutoFixture"  />
+    <PackageReference Include="AutoFixture" />
     <PackageReference Include="AutoFixture.AutoFakeItEasy" />
     <PackageReference Include="FakeItEasy" />
     <PackageReference Include="Fixie.TestAdapter" />
@@ -9,7 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Source\ContainerApps\Web\Web.Server\Web.Server.csproj" />
-    <ProjectReference Include="..\..\Source\ContainerApps\Web\Web.Shared\Web.Shared.csproj" />
+    <ProjectReference Include="..\..\Source\ContainerApps\Web\Web.Shared\Web.Contracts.csproj" />
     <ProjectReference Include="..\TimeWarp.Testing\Testing.Common.csproj" />
   </ItemGroup>
 
