Create all new Common projects that will be used in similar fashion accross all ContainerApps

--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/CodeMaid.config
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/CodeMaid.config
@@ -63,6 +63,9 @@
             <setting name="Digging_SecondarySortTypeByName" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="Reorganizing_ReverseOrderByAccessLevel" serializeAs="String">
+                <value>True</value>
+            </setting>
         </SteveCadwallader.CodeMaid.Properties.Settings>
     </userSettings>
 </configuration>
