--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Yarp/Yarp.csproj
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Yarp/Yarp.csproj
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\AspNetCore.Common\AspNetCore.Common.csproj" />
+    <ProjectReference Include="..\..\Common\Common.Server\Common.Server.csproj" />
   </ItemGroup>
 
 </Project>
