--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Server/Web.Server.csproj
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Server/Web.Server.csproj
@@ -45,8 +45,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\Common\Common.Server\Common.Server.csproj" />
+    <ProjectReference Include="..\Web.Infrastructure\Web.Infrastructure.csproj" />
     <ProjectReference Include="..\Web.Spa\Web.Spa.csproj" />
-    <ProjectReference Include="..\Web.Shared\Web.Contracts.csproj" />
   </ItemGroup>
 
   <ItemGroup>
