Add all the gRPC projects
imports assembly annotations etc boilerplate.
Some diagrams to visualize the dependencies.

--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/Common/Common.Application/Common.Application.csproj
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/Common/Common.Application/Common.Application.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Common.Contracts\Common.Contracts.csproj" />
     <ProjectReference Include="..\Common.Domain\Common.Domain.csproj" />
+    <ProjectReference Include="..\..\Libraries\TimeWarp.Modules\TimeWarp.Modules.csproj" />
   </ItemGroup>
 
 </Project>
