--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Grpc/Grpc.Contracts/Grpc.Contracts.csproj
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Grpc/Grpc.Contracts/Grpc.Contracts.csproj
@@ -12,5 +12,9 @@
     <PackageReference Include="MediatR" />
     -->
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Common\Common.Contracts\Common.Contracts.csproj" />
+  </ItemGroup>
   
 </Project>
