--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Directory.Packages.props
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Directory.Packages.props
@@ -45,7 +45,8 @@
     <PackageVersion Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.3" />
     <PackageVersion Include="Microsoft.Playwright" Version="1.20.2" />
     <PackageVersion Include="Microsoft.Tye.Extensions.Configuration" Version="0.10.0-alpha.21420.1" />
-    <PackageVersion Include="Microsoft.TypeScript.MSBuild" Version="4.6.2" />    
+    <PackageVersion Include="Microsoft.TypeScript.MSBuild" Version="4.6.2" />
+    <PackageVersion Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.15.1" />
     <PackageVersion Include="Oakton" Version="4.1.0" />
     <PackageVersion Include="PeterLeslieMorris.Blazor.FluentValidation" Version="1.7.0" />
     <PackageVersion Include="Swashbuckle.AspNetCore" Version="6.3.0" />
