--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/Common/Common.Infrastructure/Common.Infrastructure.csproj
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/Common/Common.Infrastructure/Common.Infrastructure.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\TimeWarp.OptionsValidation\TimeWarp.OptionsValidation.csproj" />
     <ProjectReference Include="..\Common.Application\Common.Application.csproj" />
   </ItemGroup>
 
