Use ApplicationNamespace var instead of POD_IDENTITY_NAMESPACE

--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/DevOps/Kubernetes/2_Workloads/Deployments/api-server/api_server-deployment.yaml
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/DevOps/Kubernetes/2_Workloads/Deployments/api-server/api_server-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: $ApplicationName
-  namespace: $POD_IDENTITY_NAMESPACE
+  namespace: $ApplicationNamespace
   labels:
     app.kubernetes.io/name: $ApplicationName
     app.kubernetes.io/part-of: $ApplicationNamespace
