Rename ServiceCollection  to ServiceCollectionOptions
update appsettings to use new name
update packages
Add appsettings for Kubernetes_Docker

--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Server/appsettings.Development.json
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Server/appsettings.Development.json
@@ -13,7 +13,7 @@
     "EnableMigration": false,
     "DocumentToCheck": ""
   },
-  "service": {
+  "ServiceCollectionOptions": {
     "web-server": {
       "protocol": "https",
       "host": "localhost",
