Add aspnetcore Environment to the Kubernetes powershell config variables
Add env section to all the server deployments

--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/DevOps/Kubernetes/2_Workloads/Deployments/api-server/api_server-deployment.yaml
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/DevOps/Kubernetes/2_Workloads/Deployments/api-server/api_server-deployment.yaml
@@ -24,4 +24,8 @@ spec:
           ports:
             - containerPort: 80
               name: http
-          
+          env:
+          - name: "ASPNETCORE_ENVIRONMENT"
+            value: $AspNetCore_Environment
+          - name: "ASPNETCORE_FORWARDEDHEADERS_ENABLED"
+            value: "true"          
