--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Web.Spa.csproj
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Web.Spa.csproj
@@ -31,6 +31,7 @@
 
   <ItemGroup>
     <InternalsVisibleTo Include="Web.Spa.Integration.Tests" />
+    <InternalsVisibleTo Include="Web.Server.Integration.Tests" />
   </ItemGroup>
 
   <ItemGroup>
