Add docker support to Grpc.Server

--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Grpc/Grpc.Server/Grpc.Server.csproj
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Grpc/Grpc.Server/Grpc.Server.csproj
@@ -2,6 +2,9 @@
 
   <PropertyGroup>
     <Nullable>enable</Nullable>
+    <UserSecretsId>0864d7ff-a930-4c8c-b168-e59213cfc814</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerfileContext>..\..\..\..</DockerfileContext>
   </PropertyGroup>
 
   <ItemGroup>
@@ -12,6 +15,7 @@
     <PackageReference Include="Grpc.AspNetCore" />
     <PackageReference Include="Grpc.AspNetCore.Server.Reflection" />
     <PackageReference Include="Grpc.AspNetCore.Web" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" />
     <PackageReference Include="protobuf-net.Grpc.AspNetCore" />
     <PackageReference Include="protobuf-net.Grpc.AspNetCore.Reflection" />
     <PackageReference Include="protobuf-net.Grpc.Reflection" />
