--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Yarp/Yarp.csproj
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Yarp/Yarp.csproj
@@ -2,9 +2,13 @@
 
   <PropertyGroup>
     <Nullable>enable</Nullable>
+    <UserSecretsId>46598075-0ceb-4d4d-b9d3-4e7731f5da3a</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerfileContext>..\..\..</DockerfileContext>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" />
     <PackageReference Include="Yarp.ReverseProxy" />
   </ItemGroup>
 
