--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/.dockerignore
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/.dockerignore
@@ -1,12 +1,29 @@
-# directories
-**/bin/
-**/obj/
+**/.classpath
+**/.dockerignore
+**/.env
+**/.git
+**/.gitignore
+**/.gitattributes
+**/.project
+**/.settings
+**/.toolstarget
+**/.vs
+**/.vscode
+**/*.*proj.user
+**/*.dbmdl
+**/*.jfm
+**/azds.yaml
+**/bin
+**/charts
+**/docker-compose*
+**/Dockerfile*
+**/node_modules
+**/npm-debug.log
+**/obj
 **/out/
-
-# files
-Dockerfile*
-**/*.trx
-**/*.md
-**/*.ps1
-**/*.cmd
-**/*.sh
+**/secrets.dev.yaml
+**/values.dev.yaml
+**/launchSettings.json
+LICENSE
+README.md
+TODO.html
