reduce scope of copied files and use alpine

--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Api/Api.Server/Dockerfile
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Api/Api.Server/Dockerfile
@@ -1,12 +1,10 @@
+ARG dotnet_version=6.0
 #See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
-FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
-WORKDIR /app
-EXPOSE 80
-EXPOSE 443
+# https://hub.docker.com/_/microsoft-dotnet
+FROM mcr.microsoft.com/dotnet/sdk:$dotnet_version-alpine AS build
 
-FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
-WORKDIR /src
+WORKDIR /git
 COPY ["NuGet.config", "."]
 COPY ["Directory.Build.props", "."]
 COPY ["Directory.Packages.props", "."]
@@ -18,19 +16,27 @@ COPY ["Source/Common/Common.Application/Common.Application.csproj", "Source/Comm
 COPY ["Source/Common/Common.Domain/Common.Domain.csproj", "Source/Common/Common.Domain/"]
 COPY ["Source/Common/Common.Contracts/Common.Contracts.csproj", "Source/Common/Common.Contracts/"]
 COPY ["Source/Libraries/TimeWarp.Modules/TimeWarp.Modules.csproj", "Source/Libraries/TimeWarp.Modules/"]
-COPY ["Source/TimeWarp.OptionsValidation/TimeWarp.OptionsValidation.csproj", "Source/TimeWarp.OptionsValidation/"]
+COPY ["Source/Libraries/TimeWarp.OptionsValidation/TimeWarp.OptionsValidation.csproj", "Source/Libraries/TimeWarp.OptionsValidation/"]
 COPY ["Source/ContainerApps/Api/Api.Infrastructure/Api.Infrastructure.csproj", "Source/ContainerApps/Api/Api.Infrastructure/"]
 COPY ["Source/ContainerApps/Api/Api.Application/Api.Application.csproj", "Source/ContainerApps/Api/Api.Application/"]
 COPY ["Source/ContainerApps/Api/Api.Domain/Api.Domain.csproj", "Source/ContainerApps/Api/Api.Domain/"]
+
+# restore nugets
 RUN dotnet restore "Source/ContainerApps/Api/Api.Server/Api.Server.csproj"
-COPY . .
-WORKDIR "/src/Source/ContainerApps/Api/Api.Server"
+
+COPY ["/Source/ContainerApps/Api/.", "Source/ContainerApps/Api"]
+COPY ["/Source/Common/.", "Source/Common"]
+COPY ["/Source/Libraries/.", "Source/Libraries"]
+
+WORKDIR "/git/Source/ContainerApps/Api/Api.Server"
 RUN dotnet build "Api.Server.csproj" -c Release -o /app/build
 
 FROM build AS publish
 RUN dotnet publish "Api.Server.csproj" -c Release -o /app/publish
 
-FROM base AS final
+FROM mcr.microsoft.com/dotnet/aspnet:$dotnet_version-alpine AS final
 WORKDIR /app
+EXPOSE 80
+EXPOSE 443
 COPY --from=publish /app/publish .
 ENTRYPOINT ["dotnet", "Api.Server.dll"]
