--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Application/Web.Application.csproj
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Application/Web.Application.csproj
@@ -8,8 +8,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\Common\Common.Application\Common.Application.csproj" />
+    <ProjectReference Include="..\Web.Contracts\Web.Contracts.csproj" />
     <ProjectReference Include="..\Web.Domain\Web.Domain.csproj" />
-    <ProjectReference Include="..\Web.Shared\Web.Contracts.csproj" />
   </ItemGroup>
 
 </Project>
