remove Swagger packagerefs they are now pulled in via Common.Infrastructure project

--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/Common/Common.Server/Common.Server.csproj
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/Common/Common.Server/Common.Server.csproj
@@ -6,8 +6,13 @@
 
   <ItemGroup>
     <PackageReference Include="MediatR" />
+    <PackageReference Include="MicroElements.Swashbuckle.FluentValidation" />    
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Annotations" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Swagger" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" />    
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
