--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Directory.Packages.props
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Directory.Packages.props
@@ -13,8 +13,8 @@
     <PackageVersion Include="Fixie" Version="3.2.0" />
     <PackageVersion Include="Fixie.TestAdapter" Version="3.2.0" />
     <PackageVersion Include="FluentAssertions" Version="6.7.0" />
-    <PackageVersion Include="FluentValidation" Version="11.0.1" />
-    <PackageVersion Include="FluentValidation.AspNetCore" Version="11.0.1" />
+    <PackageVersion Include="FluentValidation" Version="11.0.3" />
+    <PackageVersion Include="FluentValidation.AspNetCore" Version="11.0.3" />
     <PackageVersion Include="Grpc.AspNetCore" Version="2.46.0" />
     <PackageVersion Include="Grpc.AspNetCore.Server.Reflection" Version="2.46.0" />
     <PackageVersion Include="Grpc.AspNetCore.Web" Version="2.46.0" />
@@ -26,34 +26,35 @@
     <PackageVersion Include="protobuf-net.Grpc.AspNetCore" Version="1.0.152" />
     <PackageVersion Include="protobuf-net.Grpc.AspNetCore.Reflection" Version="1.0.152" />
     <PackageVersion Include="protobuf-net.Grpc.Reflection" Version="1.0.152" />
-    <PackageVersion Include="MicroElements.Swashbuckle.FluentValidation" Version="5.6.0" />
+    <PackageVersion Include="MicroElements.Swashbuckle.FluentValidation" Version="5.7.0" />
     <PackageVersion Include="Microsoft.Azure.AppConfiguration.AspNetCore" Version="5.0.0" />
-    <PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.5" />
-    <PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.5" />
-    <PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="6.0.5" />
+    <PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.6" />
+    <PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.6" />
+    <PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="6.0.6" />
     <PackageVersion Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
-    <PackageVersion Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.5" />
-    <PackageVersion Include="Microsoft.AspNetCore.SignalR.Client" Version="6.0.5" />
+    <PackageVersion Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.6" />
+    <PackageVersion Include="Microsoft.AspNetCore.SignalR.Client" Version="6.0.6" />
     <PackageVersion Include="Microsoft.CodeAnalysis" Version="4.2.0" />
     <PackageVersion Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.3" />
     <PackageVersion Include="Microsoft.CodeAnalysis.CSharp" Version="4.2.0" />
     <PackageVersion Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
     <PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
     <PackageVersion Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
-    <PackageVersion Include="Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore" Version="6.0.5" />
+    <PackageVersion Include="Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore" Version="6.0.6" />
     <PackageVersion Include="Microsoft.Extensions.Logging.Configuration" Version="6.0.0" />
     <PackageVersion Include="Microsoft.Extensions.Options" Version="6.0.0" />
     <PackageVersion Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="6.0.0" />
-    <PackageVersion Include="Microsoft.EntityFrameworkCore.Cosmos" Version="6.0.5" />
-    <PackageVersion Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.5" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.Cosmos" Version="6.0.6" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.6" />
     <PackageVersion Include="Microsoft.FeatureManagement.AspNetCore" Version="2.5.1" />
     <PackageVersion Include="Microsoft.Playwright" Version="1.22.0" />
     <PackageVersion Include="Microsoft.Tye.Extensions.Configuration" Version="0.10.0-alpha.21420.1" />
     <PackageVersion Include="Microsoft.TypeScript.MSBuild" Version="4.6.2" />
     <PackageVersion Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.15.1" />
-    <PackageVersion Include="Oakton" Version="4.5.0" />
+    <PackageVersion Include="Oakton" Version="4.5.1" />
     <PackageVersion Include="Octokit.Webhooks.AspNetCore" Version="1.0.0" />
     <PackageVersion Include="PeterLeslieMorris.Blazor.FluentValidation" Version="1.8.0" />
+    <PackageVersion Include="Scrutor" Version="4.2.0" />
     <PackageVersion Include="Swashbuckle.AspNetCore" Version="6.3.1" />
     <PackageVersion Include="Swashbuckle.AspNetCore.Annotations" Version="6.3.1" />
     <PackageVersion Include="Swashbuckle.AspNetCore.Filters" Version="7.0.2" />
